--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -110,7 +110,7 @@ body {
 }
 .typing .dot {
   animation: mercuryTypingAnimation 1.8s infinite ease-in-out;
-  background-color: #ffc989; /* TODO: Chris replace the color with sys green */
+  background-color: #25CAAC; /* TODO: Chris replace the color with sys green */
   border-radius: 50%;
   height: 7px;
   margin-right: 4px;
@@ -135,12 +135,12 @@ body {
   0% {
     transform: translateY(0px);
     /* TODO: Chris replace the color with sys green */
-    background-color: #ffc989;
+    background-color: #25CAAC;
   }
   28% {
     transform: translateY(-7px);
     /* TODO: Chris replace the color with sys green */
-    background-color: #ffa947;
+    background-color: #25CAAC;
   }
   44% {
     transform: translateY(0px);
